--- a/apps/signup/src/app.html
+++ b/apps/signup/src/app.html
@@ -1,12 +1,26 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div>%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="%sveltekit.assets%/uikit/uikit.min.css">
+	%sveltekit.head%
+
+	<style>
+		html, body {
+			height: 100%;
+			margin: 0;
+		}
+	</style>
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div>%sveltekit.body%</div>
+
+	<script src="%sveltekit.assets%/uikit/uikit-icons.min.js"></script>
+	<script src="%sveltekit.assets%/uikit/uikit.min.js"></script>
+</body>
+
 </html>
