--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- UIkit CSS -->
 	<link rel="stylesheet" href="%sveltekit.assets%/uikit/uikit.min.css">
+
 	%sveltekit.head%
 
 	<style>
@@ -19,8 +21,10 @@
 <body data-sveltekit-preload-data="hover">
 	<div>%sveltekit.body%</div>
 
-	<script src="%sveltekit.assets%/uikit/uikit-icons.min.js"></script>
+
+	<!-- UIkit JS -->
 	<script src="%sveltekit.assets%/uikit/uikit.min.js"></script>
+	<script src="%sveltekit.assets%/uikit/uikit-icons.min.js"></script>
 </body>
 
 </html>
