--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -6,10 +6,14 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<!-- UIkit -->
+	<link rel="stylesheet" href="../node_modules/uikit/dist/css/uikit.min.css">
+
 	%sveltekit.head%
 
 	<style>
-		html, body {
+		html,
+		body {
 			height: 100%;
 			margin: 0;
 		}
@@ -19,6 +23,10 @@
 <body data-sveltekit-preload-data="hover">
 	<div>%sveltekit.body%</div>
 
+
+	<!-- UIkit JS -->
+	<script src="../node_modules/uikit/dist/js/uikit.min.js"></script>
+	<script src="../node_modules/uikit/dist/js/uikit-icons.min.js"></script>
 </body>
 
 </html>
