--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -6,18 +6,19 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<!-- App css -->
+	<link rel="stylesheet" href="%sveltekit.assets%/css/styles.css">
+
 	<!-- UIkit -->
 	<link rel="stylesheet" href="../node_modules/uikit/dist/css/uikit.min.css">
+
 
 	%sveltekit.head%
 
 	<style>
-		html,
-		body {
-			height: 100%;
-			margin: 0;
-		}
+
 	</style>
+
 </head>
 
 <body data-sveltekit-preload-data="hover">
