--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,33 +1,29 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- App css -->
+    <link rel="stylesheet" href="%sveltekit.assets%/css/styles.css" />
 
-	<!-- App css -->
-	<link rel="stylesheet" href="%sveltekit.assets%/css/styles.css">
+    <!-- UIkit -->
+    <link
+      rel="stylesheet"
+      href="../node_modules/uikit/dist/css/uikit.min.css"
+    />
 
-	<!-- UIkit -->
-	<link rel="stylesheet" href="../node_modules/uikit/dist/css/uikit.min.css">
+    %sveltekit.head%
 
+    <style></style>
+  </head>
 
-	%sveltekit.head%
+  <body data-sveltekit-preload-data="hover">
+    <div>%sveltekit.body%</div>
 
-	<style>
-
-	</style>
-
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div>%sveltekit.body%</div>
-
-
-	<!-- UIkit JS -->
-	<script src="../node_modules/uikit/dist/js/uikit.min.js"></script>
-	<script src="../node_modules/uikit/dist/js/uikit-icons.min.js"></script>
-</body>
-
+    <!-- UIkit JS -->
+    <script src="../node_modules/uikit/dist/js/uikit.min.js"></script>
+    <script src="../node_modules/uikit/dist/js/uikit-icons.min.js"></script>
+  </body>
 </html>
