feat(cf): CF turnstile integration on login page.

--- a/src/app.html
+++ b/src/app.html
@@ -12,4 +12,5 @@
   <body data-sveltekit-preload-data="hover">
     <div>%sveltekit.body%</div>
   </body>
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </html>
